<resources>
    <string name="app_name">Kyut Wild Dictionary</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_me">Tentang saya</string>
    <string name="animal_brief">Ringkasan</string>
    <string name="animal_name">Nama Hewan</string>
    <string name="trDetail">Detail</string>
    <string name="trBio_name">Nama ilmiah</string>
    <string name="trKingdom">Kingdom</string>
    <string name="trFilum">Filum</string>
    <string name="trKelas">Kelas</string>
    <string name="trOrdo">Ordo</string>
    <string name="trFamily">Famili</string>
    <string name="trGenus">Genus</string>
    <string name="dicoding_username">anifyuli</string>
    <string name="name">Moh. Anif Yuliansyah</string>
    <string name="dicoding_email">anifyuliansyah@gmail.com</string>
    <string name="sumber">Sumber artikel : Wikipedia</string>
</resources>