<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/img_animal"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="137dp"
        android:contentDescription="@string/animal_name" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:orientation="vertical">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/trKingdom"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:text="@string/trFilum"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:text="@string/trOrdo"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/kingdom"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filum"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ordo"
                android:textAlignment="center"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp">


            <TextView
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:text="@string/trKelas"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:text="@string/trFamily"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:text="@string/trGenus"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/kelas"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/family"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genus"
                android:textAlignment="center"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/trBio_name"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/bio_name"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trDetail"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="2dp"
        android:textSize="14sp" />

</LinearLayout>